tests/snapshots/serde__de_sparse_array_one_element_length_two_with_properties.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n\nconst arr = new Array();\narr[1] = 1;\narr.foo = \"bar\";\narr\n"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: SparseArray(2) {
        1: I32(
            1,
        ),
        OneByte("foo"): String(
            OneByte("bar"),
        ),
    },
}

