tests/snapshots/serde__de_sparse_array_with_object.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n[/* hole */, {a: 2}]"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: SparseArray(2) {
        1: HeapReference(
            *1,
        ),
    },
    1: Object {
        OneByte("a"): I32(
            2,
        ),
    },
}

