tests/snapshots/serde__de_string_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n''"
---
=== VALUE ===
String(OneByte(""))

=== HEAP ===
Heap {}

