tests/snapshots/serde__de_string_escape_double_quote.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n'\"'"
---
=== VALUE ===
String(OneByte("\""))

=== HEAP ===
Heap {}

