tests/snapshots/serde__de_string_one_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n'asd'"
---
=== VALUE ===
String(OneByte("asd"))

=== HEAP ===
Heap {}

