tests/snapshots/serde__de_string_primitive_empty.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew String('')"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: StringObject(
        OneByte(""),
    ),
}

