tests/snapshots/serde__de_string_primitive_two_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\nnew String('asd 🌎')"
---
=== VALUE ===
HeapReference(*0)

=== HEAP ===
Heap {
    0: StringObject(
        TwoByte("asd 🌎"),
    ),
}

