tests/snapshots/serde__de_string_two_byte.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n'asd 🌎'"
---
=== VALUE ===
String(TwoByte("asd 🌎"))

=== HEAP ===
Heap {}

