tests/snapshots/serde__de_string_unpaired_surrogate.snap
---
source: tests/serde.rs
description: "=== SOURCE ===\n\"foo\\ud800bar\""
---
=== VALUE ===
String(TwoByte("foo\u{d800}bar"))

=== HEAP ===
Heap {}

